# ISDPythonFrameworkSDK

./: .gitignore  AUTHORS.md  CLAUDE.md  README.html  README.md  pyproject.toml  requirements.txt  test_runner.bat
docs/: ANALYSIS__legacy_key_migration.md
examples/cipher_kit/: quickstart.py
examples/excel_painter/: generate_templates.py  io_integration.py
examples/monitoring/: different_usecase.py
examples/path_manager/: quickstart.py
exp_tests/monitoring/: three_methods_test.py
personal_experiment/: SingletonSystemLogger.py  adapters.py  enum.py  logger.py  old_legacy.py  test.py  tk_pack.py
src/hyper_framework/: Singleton.py  __init__.py  _version.py  assertions.py  cli.py  decorators.py  events_bus.py  exceptions.py  interface.py  msg_logger.py
src/hyper_framework/decorators/: __init__.py
src/hyper_framework/events/: CustomCallbackClass.py  DelayEventBase.py  DelayEventBusManager.py  EventBase.py  EventBase.pyi  EventManager.py  EventManager.pyi  Events.py  UIEvents.py  __init__.py
src/hyper_framework/exceptions/: __init__.py  exceptions.py
src/hyper_framework/file_compare/: __init__.py  _shared.py  html_report.py
src/hyper_framework/file_compare/csv_unittest_module/: __init__.py
src/hyper_framework/file_compare/excel_unittest_module/: run_excel_structure_test.py
src/hyper_framework/file_compare/ini_unittest_module/: __init__.py
src/hyper_framework/file_compare/json_unittest_module/: run_json_structure_test.py
src/hyper_framework/file_compare/jsonl_unittest_module/: __init__.py  run_jsonl_structure_test.py
src/hyper_framework/file_compare/toml_unittest_module/: __init__.py
src/hyper_framework/file_compare/txt_unittest_module/: __init__.py
src/hyper_framework/file_compare/xml_unittest_module/: __init__.py  run_xml_structure_test.py
src/hyper_framework/file_compare/yaml_unittest_module/: run_yaml_structure_test.py
src/hyper_framework/helpers/: __init__.py
src/hyper_framework/helpers/assertions/: __init__.py  type_assertions.py  value_assertions.py
src/hyper_framework/helpers/decorators/: __init__.py  decorators_pack.py  gui.py  lifecycle.py  profiling.py
src/hyper_framework/helpers/exceptions/: __init__.py  _test.py  etl.py  options.py  runtime.py  validation.py
src/hyper_framework/message_logger/: OLD_DEV_PLAN.md  SingletonSystemLogger.py  SingletonSystemLogger.pyi  __init__.py  _sinks.py  adapters.py  levels.py  logger.py
src/hyper_framework/unitest_structure/: __init__.py  _shared.py  html_report.py
src/hyper_framework/unitest_structure/csv_unittest_module/: run_csv_structure_test.py
src/hyper_framework/unitest_structure/excel_unittest_module/: __init__.py  depreacted.py  (+1 more)
src/hyper_framework/window_design_helper/: __init__.py
src/isd_py_framework_sdk/: __init__.py  _optional.py  _version.py  assertions.py  cli.py  decorators.py  events_bus.py  exceptions.py  interface.py  msg_logger.py
src/isd_py_framework_sdk/BetterPyExcelHelper/: __init__.py  df_data_processor.py  dict_to_df.py  excel_painter.py  view_helper.py
src/isd_py_framework_sdk/base/: README.md  __init__.py  agent.md  exp01.py  exp02.py
src/isd_py_framework_sdk/cipher_kit/: README.md  __init__.py  agent.md  ciphers.py  envelope.py  errors.py  kdf.py  key_sources.py  keygen.py  rsa_utils.py
src/isd_py_framework_sdk/credential_vault/: README.md  __init__.py  agent.md  discovery.py  sources.py  vault.py
src/isd_py_framework_sdk/events/: DelayEventBase.py  DelayEventBusManager.py  EventManager.py  Events.py  MulticastCallback.py  README.md  __init__.py  agent.md
src/isd_py_framework_sdk/excel_painter/: README.md  __init__.py  _format_snapshot.py  agent.md  convenience.py  highlight.py  painter.py  styles.py  templates.py  width.py
src/isd_py_framework_sdk/file_compare/: README.md  __init__.py  agent.md  html_report.py
src/isd_py_framework_sdk/helpers/: README.md  __init__.py  agent.md
src/isd_py_framework_sdk/interop/: README.md  __init__.py  _bridges.py  agent.md
src/isd_py_framework_sdk/message_logger/: MY_OLD_DEV_NOTION.md  README.md  SingletonSystemLogger.py  SingletonSystemLogger.pyi  __init__.py  adapters.py  agent.md  logger.py
src/isd_py_framework_sdk/monitoring/: README.md  __init__.py  agent.md  looped_function_timer.py
src/isd_py_framework_sdk/path_manager/: InnoRankingDataGeneration.py  README.md  __init__.py  _conflict.py  _enums.py  _meta.py  _registry.py  _resolver.py  _waterfall.py  agent.md  dev_plan.md  interface.py  singleton_path_manager.py
src/isd_py_framework_sdk/unified_io/: README.md  __init__.py  agent.md  data_io.py  df_tools.py  legacy.sql_writer.py
src/isd_py_framework_sdk/window_design_helper/: IScalableWindowTester.py  README.md  agent.md
tests/base/: singleton_test.py
tests/cipher_kit/: test_cipher_kit.py
tests/credential_vault/: test_credential_vault.py
tests/events/: delay_test.py  event_test.py  events.py  multicallbacks.py  robustness_test.py
tests/excel_painter/: test_excel_painter.py
tests/file_test/: README.md  conftest.py  test_csv.py  test_excel.py  test_file_formats.py  test_ini.py  test_json.py  test_jsonl.py  test_toml.py  test_txt.py  test_xml.py  test_yaml.py
tests/helpers/: assertions_test.py  decorators_test.py  exceptions_test.py
tests/interop/: test_interop.py
tests/logger/: _legacy_.py  combined_logger.py  file_logger.py  local_http_adapter_demo.py  local_http_listener.py  queued_socket_adapter_demo.py  socket_listener.py  terminal_logger.py  test__msg_logger.py  tkinter_logger.py
tests/monitoring/: different_usecase_test.py  three_methods_test.py
tests/path/: test_path_manager.py
tests/smoke/: test_smoke.py
tests/test_file/: README.md  generate_samples.py  run_all.py  test_csv.py  test_excel.py  test_ini.py  test_json.py  test_jsonl.py  test_toml.py  test_txt.py  test_xml.py  test_yaml.py
tests/test_file/base/: [BU] sample.csv  [BU] sample.ini  [BU] sample.json  [BU] sample.jsonl  [BU] sample.txt  [BU] sample.xlsx  [BU] sample.xml  [BU] sample.yaml  sample.csv  sample.json  sample.jsonl  sample.toml  sample.txt  sample.xlsx
tools/: run_file_tests.py
(+53 files in other folders)
