[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isd-py-framework-sdk"
dynamic = ["version"]
description = "ISD Python Framework — The foundational base framework for ISD module development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "周暘恩", email = "chouyangen0401@ntu.edu.tw" },
    { name = "Anthony Chou", email = "mi.anthony.chou@gmail.com" },
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "isd_py_framework_sdk._version.__version__" }

[project.optional-dependencies]
# Optional extras grouped by real subpackage names. Default install is the
# core framework only (no optional heavy backends). Users can opt into the
# extra features they need using extras named after modules.

# Development helpers (tests, formatting)
dev = [
    "pytest>=7.0",
    "black>=24.0",
]

# Terminal/color support for the message logger
message_logger = [
    "colorama>=0.4.6",
]

# Excel backend for file_compare (openpyxl + pandas)
"file_compare.excel" = [
    "openpyxl>=3.1",
    "pandas>=2.0",
]

# YAML backend for file_compare
"file_compare.yaml" = [
    "pyyaml>=6.0",
]

# Convenience: all file_compare backends
file_compare = [
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

# All-including convenience (dev + file_compare + message_logger)
all = [
    "pytest>=7.0",
    "black>=24.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
]

[project.scripts]
# isd-py-framework-sdk -V / --version
isd-py-framework-sdk = "isd_py_framework_sdk.cli:main"
