[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isd-py-framework-sdk"
dynamic = ["version"]
description = "ISD Python Framework — The foundational base framework for ISD module development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "周暘恩", email = "chouyangen0401@ntu.edu.tw" },
    { name = "Anthony Chou", email = "mi.anthony.chou@gmail.com" },
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "isd_py_framework_sdk._version.__version__" }

[project.optional-dependencies]
# Optional extras grouped by real subpackage names. Default install is the
# core framework only (no optional heavy backends). Users can opt into the
# extra features they need using extras named after modules.

# Development helpers (tests, formatting)
dev = [
    "pytest>=7.0",
    "black>=24.0",
]

# Terminal/color support for the message logger
message_logger = [
    "colorama>=0.4.6",
]

# Excel backend for file_compare (openpyxl + pandas)
"file_compare.excel" = [
    "openpyxl>=3.1",
    "pandas>=2.0",
]

# YAML backend for file_compare
"file_compare.yaml" = [
    "pyyaml>=6.0",
]

# Convenience: all file_compare backends
file_compare = [
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

# Unified IO — core (CSV / JSON, no heavy backends)
unified_io = [
    "pandas>=2.0",
]

# Unified IO — Excel backend
"unified_io.excel" = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

# Unified IO — SQL backend
"unified_io.sql" = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
]

# Excel visual-formatting module
excel_painter = [
    "openpyxl>=3.1",
    "wcwidth>=0.2",
]

# Encryption toolkit — core (AES-256-GCM / ChaCha20-Poly1305 / scrypt / PBKDF2 / RSA)
cipher_kit = [
    "cryptography>=42",
]

# cipher_kit — Argon2id KDF backend (memory-hard, recommended)
"cipher_kit.argon2" = [
    "cryptography>=42",
    "argon2-cffi>=23",
]

# cipher_kit — OS secure-store key source (Windows Credential Manager / Keychain / Secret Service)
"cipher_kit.keyring" = [
    "cryptography>=42",
    "keyring>=24",
]

# Credential / config loader — core (.env support; JSON + os.environ need no extras)
credential_vault = [
    "python-dotenv>=1.0",
]

# credential_vault — YAML config source
"credential_vault.yaml" = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

# All-including convenience (dev + file_compare + message_logger + unified_io + excel_painter
# + cipher_kit + credential_vault)
all = [
    "pytest>=7.0",
    "black>=24.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "sqlalchemy>=2.0",
    "wcwidth>=0.2",
    "cryptography>=42",
    "argon2-cffi>=23",
    "keyring>=24",
    "python-dotenv>=1.0",
]

[project.scripts]
# isd-py-framework-sdk -V / --version
isd-py-framework-sdk = "isd_py_framework_sdk.cli:main"
